[package]
name = "voxels"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.12", default-features = false}

enum_dispatch = "0.3"
fast-surface-nets = "0.2"
serde = "1.0"
smallvec = "1.11"
